--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
       </div>
     </section>
 
-    <section></section>
+    <section>
+      <h1>Testeo de conexion local-remota</h1>
+    </section>
 
     <script>
       const toggleBtn = document.querySelector(".menu-toggle");
