--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 
     <section id="Contenido">
       <div class="cabecera-contenido">
-        <p>Estimado invitado, nos tomamos la libertad de hacer una invitacion digital por lo que debera seguir algunas <span>Recomendaciones</span> para la celebracion por la llegada de nuestro bebe</p>
+        <p>Estimado invitado, nos tomamos la libertad de hacer una invitacion digital por lo que debera seguir algunas <span>Recomendaciones</span> para la celebracion por la llegada de nuestro bebe de manera efectiva y divertida.</p>
       </div>
     </section>
 
     <section>
-      <h1>Testeo de conexion local-remota</h1>
+      
     </section>
 
     <script>
