Incrustacion del script por archivo de texto

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ...código existente... -->
+    <link rel="icon" href="baby-solid.svg" type="image/x-icon" />
+<!-- ...código existente... -->
     <link rel="stylesheet" href="estilos.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
@@ -70,13 +73,6 @@
       
     </section>
 
-    <script>
-      const toggleBtn = document.querySelector(".menu-toggle");
-      const menu = document.querySelector(".menu");
-
-      toggleBtn.addEventListener("click", () => {
-        menu.classList.toggle("active");
-      });
-    </script>
+    <script src="script.js"> </script>
   </body>
 </html>
