Inicio de la seccion 1 del index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- ...código existente... -->
     <link rel="icon" href="baby-solid.svg" type="image/x-icon" />
-<!-- ...código existente... -->
+    <!-- ...código existente... -->
     <link rel="stylesheet" href="estilos.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
@@ -21,7 +21,6 @@
     <title>Nombre del bebe</title>
   </head>
   <body>
-    
     <header>
       <div class="cabecera">
         <h1><i class="fa-solid fa-baby"></i> Baby Shower</h1>
@@ -46,7 +45,6 @@
       <div class="contenido-descripcion">
         <div class="img-container">
           <img src="family.webp" alt="Ilustración de familia" />
-
         </div>
         <div class="texto-descripcion">
           <h2>¡Estamos esperando un bebé!</h2>
@@ -60,19 +58,62 @@
     </section>
 
     <div class="texto-uno">
-        <h2>Recomendaciones</h2>
-      </div>
+      <h2>Recomendaciones</h2>
+    </div>
 
     <section id="Contenido">
       <div class="cabecera-contenido">
-        <p>Estimado invitado, nos tomamos la libertad de hacer una invitacion digital por lo que debera seguir algunas <span>Recomendaciones</span> para la celebracion por la llegada de nuestro bebe de manera efectiva y divertida.</p>
+        <p>
+          Estimado invitado nos tomamos la libertad de hacer una invitacion
+          digital por lo que debera seguir algunas
+          <span>Recomendaciones</span> para la celebracion por la llegada de
+          nuestro bebe de manera efectiva y divertida.
+        </p>
       </div>
     </section>
 
-    <section>
-      
+    <section id="section-uno">
+      <div class="subsection-uno">
+        <i class="fa-solid fa-gift"></i>
+        <h2>Regalos</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque facere
+          delectus ipsum hic modi placeat consequatur sapiente non labore?
+          Iusto, illo dicta natus recusandae repudiandae cupiditate sapiente
+          asperiores nostrum modi? Ipsa a architecto reprehenderit dicta dolor
+          temporibus, at exercitationem velit libero? Reiciendis aspernatur iste
+          facere assumenda quisquam! Rerum quaerat voluptas placeat praesentium
+          corrupti et possimus, porro quisquam, eligendi animi molestiae!
+        </p>
+      </div>
+      <div class="subsection-dos">
+        <h2>Estacionamiento</h2>
+        <p></p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque facere
+          delectus ipsum hic modi placeat consequatur sapiente non labore?
+          Iusto, illo dicta natus recusandae repudiandae cupiditate sapiente
+          asperiores nostrum modi? Ipsa a architecto reprehenderit dicta dolor
+          temporibus, at exercitationem velit libero? Reiciendis aspernatur iste
+          facere assumenda quisquam! Rerum quaerat voluptas placeat praesentium
+          corrupti et possimus, porro quisquam, eligendi animi molestiae!
+        </p>
+      </div>
+      <div class="subsection-tres">
+        <h2>Festejo</h2>
+        <p></p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque facere
+          delectus ipsum hic modi placeat consequatur sapiente non labore?
+          Iusto, illo dicta natus recusandae repudiandae cupiditate sapiente
+          asperiores nostrum modi? Ipsa a architecto reprehenderit dicta dolor
+          temporibus, at exercitationem velit libero? Reiciendis aspernatur iste
+          facere assumenda quisquam! Rerum quaerat voluptas placeat praesentium
+          corrupti et possimus, porro quisquam, eligendi animi molestiae!
+        </p>
+      </div>
     </section>
 
-    <script src="script.js"> </script>
+    <script src="script.js"></script>
   </body>
 </html>
