--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section id="section-uno">
       <div class="subsection-uno">
-        <i class="fa-solid fa-gift"></i>
+        
         <h2>Regalos</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque facere
@@ -85,6 +85,7 @@
           facere assumenda quisquam! Rerum quaerat voluptas placeat praesentium
           corrupti et possimus, porro quisquam, eligendi animi molestiae!
         </p>
+        <img src="baby-solid.svg" alt="">
       </div>
       <div class="subsection-dos">
         <h2>Estacionamiento</h2>
@@ -98,6 +99,7 @@
           facere assumenda quisquam! Rerum quaerat voluptas placeat praesentium
           corrupti et possimus, porro quisquam, eligendi animi molestiae!
         </p>
+        <img src="baby-solid.svg" alt="">
       </div>
       <div class="subsection-tres">
         <h2>Festejo</h2>
@@ -111,6 +113,7 @@
           facere assumenda quisquam! Rerum quaerat voluptas placeat praesentium
           corrupti et possimus, porro quisquam, eligendi animi molestiae!
         </p>
+        <img src="baby-solid.svg" alt="">
       </div>
     </section>
 
