Modifify elements: sections, scroll behavior, icons fontawesome

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <img src="baby-solid.svg" alt="">
       </div>
       <div class="subsection-dos">
+           <i class="fa-solid fa-car"></i>
         <h2>Estacionamiento</h2>
         <p></p>
         <p>
@@ -102,6 +103,7 @@
         <img src="baby-solid.svg" alt="">
       </div>
       <div class="subsection-tres">
+           <i class="fa-solid fa-cake-candles"></i>
         <h2>Festejo</h2>
         <p></p>
         <p>
@@ -114,6 +116,12 @@
           corrupti et possimus, porro quisquam, eligendi animi molestiae!
         </p>
         <img src="baby-solid.svg" alt="">
+      </div>
+    </section>
+
+    <section id="asistencia">
+      <div class="section-asistencia">
+        <h1>Asistencia</h1>
       </div>
     </section>
 
