Modifify elements: sections, scroll behavior, icons fontawesome

--- a/index.html
+++ b/index.html
@@ -72,52 +72,31 @@
       </div>
     </section>
 
-    <section id="section-uno">
-      <div class="subsection-uno">
-        
-        <h2>Regalos</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque facere
-          delectus ipsum hic modi placeat consequatur sapiente non labore?
-          Iusto, illo dicta natus recusandae repudiandae cupiditate sapiente
-          asperiores nostrum modi? Ipsa a architecto reprehenderit dicta dolor
-          temporibus, at exercitationem velit libero? Reiciendis aspernatur iste
-          facere assumenda quisquam! Rerum quaerat voluptas placeat praesentium
-          corrupti et possimus, porro quisquam, eligendi animi molestiae!
-        </p>
-        <img src="baby-solid.svg" alt="">
-      </div>
-      <div class="subsection-dos">
-           <i class="fa-solid fa-car"></i>
-        <h2>Estacionamiento</h2>
-        <p></p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque facere
-          delectus ipsum hic modi placeat consequatur sapiente non labore?
-          Iusto, illo dicta natus recusandae repudiandae cupiditate sapiente
-          asperiores nostrum modi? Ipsa a architecto reprehenderit dicta dolor
-          temporibus, at exercitationem velit libero? Reiciendis aspernatur iste
-          facere assumenda quisquam! Rerum quaerat voluptas placeat praesentium
-          corrupti et possimus, porro quisquam, eligendi animi molestiae!
-        </p>
-        <img src="baby-solid.svg" alt="">
-      </div>
-      <div class="subsection-tres">
-           <i class="fa-solid fa-cake-candles"></i>
-        <h2>Festejo</h2>
-        <p></p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque facere
-          delectus ipsum hic modi placeat consequatur sapiente non labore?
-          Iusto, illo dicta natus recusandae repudiandae cupiditate sapiente
-          asperiores nostrum modi? Ipsa a architecto reprehenderit dicta dolor
-          temporibus, at exercitationem velit libero? Reiciendis aspernatur iste
-          facere assumenda quisquam! Rerum quaerat voluptas placeat praesentium
-          corrupti et possimus, porro quisquam, eligendi animi molestiae!
-        </p>
-        <img src="baby-solid.svg" alt="">
-      </div>
-    </section>
+  <section id="section-uno">
+  <div class="subsection-uno">
+    <i class="fa-solid fa-gift"></i>
+    <h2>Regalos</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi illum aut provident rem minima beatae sed possimus dolor earum exercitationem delectus sit ullam velit pariatur, incidunt explicabo repudiandae nemo!
+    </p>
+  </div>
+
+  <div class="subsection-dos">
+    <i class="fa-solid fa-square-parking"></i>
+    <h2>Estacionamiento</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi illum aut provident rem minima beatae sed possimus dolor earum exercitationem delectus sit ullam velit pariatur, incidunt explicabo repudiandae nemo!
+    </p>
+  </div>
+
+  <div class="subsection-tres">
+    <i class="fa-solid fa-cake-candles"></i>
+    <h2>Festejo</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi illum aut provident rem minima beatae sed possimus dolor earum exercitationem delectus sit ullam velit pariatur, incidunt explicabo repudiandae nemo!
+    </p>
+  </div>
+</section>
 
     <section id="asistencia">
       <div class="section-asistencia">
