Insercion del formulario en index.html

--- a/index.html
+++ b/index.html
@@ -1,109 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- ...código existente... -->
-    <link rel="icon" href="baby-solid.svg" type="image/x-icon" />
-    <!-- ...código existente... -->
-    <link rel="stylesheet" href="estilos.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
 
-    <!-- Agrega esto en la etiqueta <head> de tu HTML -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- ...código existente... -->
+  <link rel="icon" href="baby-solid.svg" type="image/x-icon" />
+  <!-- ...código existente... -->
+  <link rel="stylesheet" href="estilos.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 
-    <title>Nombre del bebe</title>
-  </head>
-  <body>
-    <header>
-      <div class="cabecera">
-        <h1><i class="fa-solid fa-baby"></i> Baby Shower</h1>
+  <!-- Agrega esto en la etiqueta <head> de tu HTML -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  
 
-        <!-- Botón hamburguesa -->
-        <button class="menu-toggle" aria-label="Abrir menú">
-          <i class="fa-solid fa-bars"></i>
-        </button>
+  <title>Nombre del bebe</title>
+</head>
 
-        <!-- Navegación -->
-        <nav class="menu">
-          <ul>
-            <li><a href="#Contenido">Contenido</a></li>
-            <li><a href="#asistencia">Asistencia</a></li>
-            <li><a href="#ubicacion">Ubicación</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+<body>
+  <header>
+    <div class="cabecera">
+      <h1><i class="fa-solid fa-baby"></i> Baby Shower</h1>
 
-    <section id="descripcion">
-      <div class="contenido-descripcion">
-        <div class="img-container">
-          <img src="family.webp" alt="Ilustración de familia" />
-        </div>
-        <div class="texto-descripcion">
-          <h2>¡Estamos esperando un bebé!</h2>
-          <p>
-            Estamos emocionados de celebrar la llegada de nuestro pequeño
-            <span>Matias Gael</span>. Aquí encontrarás toda la información
-            necesaria para unirte a nosotros en este día especial.
-          </p>
-        </div>
-      </div>
-    </section>
+      <!-- Botón hamburguesa -->
+      <button class="menu-toggle" aria-label="Abrir menú">
+        <i class="fa-solid fa-bars"></i>
+      </button>
 
-    <div class="texto-uno">
-      <h2>Recomendaciones</h2>
+      <!-- Navegación -->
+      <nav class="menu">
+        <ul>
+          <li><a href="#Contenido">Contenido</a></li>
+          <li><a href="#asistencia">Asistencia</a></li>
+          <li><a href="#ubicacion">Ubicación</a></li>
+        </ul>
+      </nav>
     </div>
+  </header>
 
-    <section id="Contenido">
-      <div class="cabecera-contenido">
+  <section id="descripcion">
+    <div class="contenido-descripcion">
+      <div class="img-container">
+        <img src="family.webp" alt="Ilustración de familia" />
+      </div>
+      <div class="texto-descripcion">
+        <h2>¡Estamos esperando un bebé!</h2>
         <p>
-          Estimado invitado nos tomamos la libertad de hacer una invitacion
-          digital por lo que debera seguir algunas
-          <span>Recomendaciones</span> para la celebracion por la llegada de
-          nuestro bebe de manera efectiva y divertida.
+          Estamos emocionados de celebrar la llegada de nuestro pequeño
+          <span>Matias Gael</span>. Aquí encontrarás toda la información
+          necesaria para unirte a nosotros en este día especial.
         </p>
       </div>
-    </section>
+    </div>
+  </section>
+
+  <div class="texto-uno">
+    <h2>Recomendaciones</h2>
+  </div>
+
+  <section id="Contenido">
+    <div class="cabecera-contenido">
+      <p>
+        Estimado invitado nos tomamos la libertad de hacer una invitacion
+        digital por lo que debera seguir algunas
+        <span>Recomendaciones</span> para la celebracion por la llegada de
+        nuestro bebe de manera efectiva y divertida.
+      </p>
+    </div>
+  </section>
 
   <section id="section-uno">
-  <div class="subsection-uno">
-    <i class="fa-solid fa-gift"></i>
-    <h2>Regalos</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi illum aut provident rem minima beatae sed possimus dolor earum exercitationem delectus sit ullam velit pariatur, incidunt explicabo repudiandae nemo!
-    </p>
-  </div>
+    <div class="subsection-uno">
+      <i class="fa-solid fa-gift"></i>
+      <h2>Regalos</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi illum aut provident rem minima beatae
+        sed possimus dolor earum exercitationem delectus sit ullam velit pariatur, incidunt explicabo repudiandae nemo!
+      </p>
+    </div>
 
-  <div class="subsection-dos">
-    <i class="fa-solid fa-square-parking"></i>
-    <h2>Estacionamiento</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi illum aut provident rem minima beatae sed possimus dolor earum exercitationem delectus sit ullam velit pariatur, incidunt explicabo repudiandae nemo!
-    </p>
-  </div>
+    <div class="subsection-dos">
+      <i class="fa-solid fa-square-parking"></i>
+      <h2>Estacionamiento</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi illum aut provident rem minima beatae
+        sed possimus dolor earum exercitationem delectus sit ullam velit pariatur, incidunt explicabo repudiandae nemo!
+      </p>
+    </div>
 
-  <div class="subsection-tres">
-    <i class="fa-solid fa-cake-candles"></i>
-    <h2>Festejo</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi illum aut provident rem minima beatae sed possimus dolor earum exercitationem delectus sit ullam velit pariatur, incidunt explicabo repudiandae nemo!
-    </p>
-  </div>
-</section>
+    <div class="subsection-tres">
+      <i class="fa-solid fa-cake-candles"></i>
+      <h2>Festejo</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores modi illum aut provident rem minima beatae
+        sed possimus dolor earum exercitationem delectus sit ullam velit pariatur, incidunt explicabo repudiandae nemo!
+      </p>
+    </div>
+  </section>
 
-    <section id="asistencia">
-      <div class="section-asistencia">
-        <h1>Asistencia</h1>
+  <section id="asistencia">
+    <div class="section-asistencia">
+      <h1>Asistencia</h1>
+      <div>
+        
       </div>
-    </section>
+    </div>
+  </section>
 
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
+
 </html>
